--- a/public/mastermind.html
+++ b/public/mastermind.html
@@ -10,8 +10,8 @@
 <body>
     <p>Please choose the code you want the computer to solve</p>
     <form action="/initiate" method="GET">
-        <label for="color1">First Color:</label>
-        <select id="color1" name="color1">
+        <label for="firstColor">First Color:</label>
+        <select id="firstColor" name="firstColor">
             <option value="green">Green</option>
             <option value="orange">Orange</option>
             <option value="pink">Pink</option>
@@ -19,8 +19,8 @@
             <option value="white">White</option>
             <option value="yellow">Yellow</option>
         </select><br>
-        <label for="color2">Second Color:</label>
-        <select id="color2" name="color2">
+        <label for="secondColor">Second Color:</label>
+        <select id="secondColor" name="secondColor">
             <option value="green">Green</option>
             <option value="orange">Orange</option>
             <option value="pink">Pink</option>
@@ -28,8 +28,8 @@
             <option value="white">White</option>
             <option value="yellow">Yellow</option>
         </select><br>
-        <label for="color3">Third Color:</label>
-        <select id="color3" name="color3">
+        <label for="thirdColor">Third Color:</label>
+        <select id="thirdColor" name="thirdColor">
             <option value="green">Green</option>
             <option value="orange">Orange</option>
             <option value="pink">Pink</option>
@@ -37,8 +37,8 @@
             <option value="white">White</option>
             <option value="yellow">Yellow</option>
         </select><br>
-        <label for="color4">Fourth Color:</label>
-        <select id="color4" name="color4">
+        <label for="fourthColor">Fourth Color:</label>
+        <select id="fourthColor" name="fourthColor">
             <option value="green">Green</option>
             <option value="orange">Orange</option>
             <option value="pink">Pink</option>
